@@ -4,18 +4,38 @@ public class WrapperClasses {
 	
 	public static void main(String[] args) {
 		
-		Integer obj = new Integer(12);
+//		Integer obj = new Integer(12);
+//		
+//		Integer obj2 = Integer.valueOf(12);
+//		System.out.println(obj);
+//		System.out.println(obj2);
+//		
+//		Integer obj3 =10;//Autoboxing
+//		
+//		int age = obj; //unboxing
+//		
+//		Boolean myboolean = Boolean.valueOf(false);
+//		System.out.println(myboolean);
 		
-		Integer obj2 = Integer.valueOf(12);
-		System.out.println(obj);
-		System.out.println(obj2);
+//		Long e = 500L;
+//		int m = e.intValue();//non primitive to primitive
+//		System.out.println("m" +m);
+//		
+//		Double d = 5.4;
+//		float f = d.floatValue();
+//		System.out.println("f" +f);
 		
-		Integer obj3 =10;//Autoboxing
+//		int a =1234;
+//		String s = String.valueOf(a);//convert non primitive to primitive
+//		Double d = Double.valueOf(a);
+//		
+//		System.out.println(s);
+//		System.out.println(d);
 		
-		int age = obj; //unboxing
+		Integer a = 12345;
+		String s = a.toString();
+		System.out.println(s);
 		
-		Boolean myboolean = Boolean.valueOf(false);
-		System.out.println(myboolean);
 	}
 
 }
